<resources>
    <string name="app_name">CineFast</string>
    <string name="homepage_button">Get Started</string>
    <string name="homepage_title">Explore now to experience the benefits</string>
    <string name="homepage_description">Welcome to CineFast, a cinema seat booking application</string>
    <string name="appName">CineFast</string>
    <string name="splashimage">SplashImage</string>
    <string name="background">background</string>
    <string name="en">EN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_and_continue">Confirm and Continue</string>
    <string name="snacks_and_drinks">Snacks And Drinks</string>
    <string name="select_items">Select Items</string>
    <string name="fast">FAST</string>
    <string name="cine">Cine</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="home">Home</string>
    <string name="my_bookings">My Bookings</string>
    <string name="logout">Logout</string>
    <string name="menu">Menu</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
</resources>